--- a/html/perfil.html
+++ b/html/perfil.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Blog</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/font/flaticon.css">
-    <link rel="stylesheet" href="css/media-queries.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/font/flaticon.css">
+    <link rel="stylesheet" href="../css/media-queries.css">
 </head>
 <body>
     <header>
@@ -22,10 +22,10 @@
         </section>
         <nav>
             <section class="nav-logo-container">
-                <a href=""><img src="assets/img/Logo-negro.png" alt="logo de mi blog"></a>
+                <a href=""><img src="../assets/img/Logo-negro.png" alt="logo de mi blog"></a>
             </section>
             <section class="profile-link">
-                <a href="perfil.html">Sobre mi</a>
+                <a href="./perfil.html">Sobre mi</a>
             </section>
         </nav>
     </header>
@@ -33,7 +33,7 @@
         <section class="profile-main-container">
             <div class="grid-container profile-container">
                 <div>
-                    <img src="assets/img/Perfil2.jpg" alt="">
+                    <img src="../assets/img/Perfil2.jpg" alt="">
                 </div>
                 <div>
                     <h2>hola, soy Riszart</h2>
@@ -62,14 +62,14 @@
         </section>
         <section class="contact-main-container">
             <div>
-                <img src="assets/img/013-newsletter.png" alt="">
+                <img src="../assets/img/013-newsletter.png" alt="">
                 <div class="contact-left">
                     <a href="">Contacto</a>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
             <div>
-                <img src="assets/img/006-like.png" alt="">
+                <img src="../assets/img/006-like.png" alt="">
                 <div class="contact-right">
                     <a href="">Escribe</a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
