termino de la parte del block con su respectivas funciones de seleccion

--- a/html/blogs.html
+++ b/html/blogs.html
@@ -34,11 +34,11 @@
             <div class="grid-container blogs-main-new">
                 <h3>Noticias</h3>
                 <div class="blogs-news-img-container">
-                    <img src="../assets/img/main-news-img.png" alt="">
+                    <img class="img-news-p" src="../assets/img/main-news-img.png" alt="">
                 </div>
                 <div class="blogs-news-info-container">
-                    <h2>Titulo de blogpost</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit debitis, adipisci iste provident et ipsam necessitatibus at ratione eligendi vel hic aliquam </p>
+                    <h2 class="title-sub-top">Titulo de blogpost</h2>
+                    <p class="p-content-news">Lorem ipsum dolor sit </p>
                     <a href="../html/blog.html" class="blogs-button">leer mas</a>
                 </div>
             </div>
@@ -54,10 +54,10 @@
                 </article>-->
             </div>
         </section>
+
     </main>
-    <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    </footer>
+
+
     <script src="../js/script.js"></script>
 </body>
 </html>
