--- a/html/blog.html
+++ b/html/blog.html
@@ -55,14 +55,14 @@
         </section>
         <section class="contact-main-container">
             <div>
-                <img src="assets/img/013-newsletter.png" alt="">
+                <img src="../assets/img/013-newsletter.png" alt="">
                 <div class="contact-left">
                     <a href="">Contacto</a>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
             <div>
-                <img src="assets/img/006-like.png" alt="">
+                <img src="../assets/img/006-like.png" alt="">
                 <div class="contact-right">
                     <a href="">Escribe</a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
